--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-09-04: Fixed using attack type skills too fast will target self. [AlexKreuz]
- 06-07-04: Switched skill [SM_RECOVERY] to PSS system. [AlexKreuz]
- 06-07-04: Minor PVP pathfinding fixes. [AlexKreuz]
- 06-07-04: Skill SM_PROVOKE now provokes PVP targets into attacking player. [AlexKreuz]
- 06-07-04: Switched skill [SM_TWOHAND] to PSS system. [AlexKreuz]
- 06-07-04: Switched skill [SM_SWORD] to PSS system. [AlexKreuz]
- 06-07-04: Removed memory leaks from Player_Skills.pas. [AlexKreuz]
- 06-05-04: Created 'process_skill_attack' procedure for PSS system. [AlexKreuz]
- 06-05-04: Switched skill [SM_BASH] to PSS system. [AlexKreuz]
- 06-05-04: Switched skill [AC_DOUBLE] to PSS system. [AlexKreuz]
- 06-05-04: Switched skill [SM_PROVOKE] to PSS system. [AlexKreuz]
- 06-05-04: Player_Skills - Added Skill Double Strafing. [Darkhelmet]
- 06-05-04: Added Skill Failure error checking to PSS. [AlexKreuz]
- 06-05-04: Testing of PSS using SM_PROVOKE. [AlexKreuz]
- 06-05-04: Creation of PSS, Partitioned Skill Structure. [AlexKreuz]
- 06-05-04: Removed all Athena GM command ports. Will implement into ALBGM later. ALBGM completed. [AlexKreuz]
- 06-05-04: Switched GM Command, #USERS to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #PWORD to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #NEWPLAYER to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #GPVPOFF to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #GPVPON to ALBGM system. [AlexKreuz]
- 06-04-04: Fixed ALBGM for general users at access level 0. [AlexKreuz]
- 06-04-04: Set default GM_SERVER level to access level 0. [AlexKreuz]
- 06-04-04: Switched GM Command, #PVPOFF to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #PVPON to ALBGM system. [AlexKreuz]